Finalize typography and location updates

--- a/careers.html
+++ b/careers.html
@@ -7,23 +7,20 @@
     <title>Careers at Omoola Supermarket Stores</title>
     <meta
       name="description"
-      content="Build a fulfilling career with Omoola Supermarket Stores—join our Lagos team across operations, tech, growth, and service."
+      content="Build a fulfilling career with Omoola Supermarket Stores—join our Owode Yewa team across operations, tech, growth, and service."
     />
-    <link rel="canonical" href="https://www.omoola.ng/careers.html" />
+    <link rel="canonical" href="https://www.omoolasupermarketstores.com/careers.html" />
     <meta property="og:title" content="Careers at Omoola Supermarket Stores" />
     <meta
       property="og:description"
-      content="We’re hiring passionate Nigerians to deliver premium grocery experiences across Lagos and beyond."
+      content="We’re hiring passionate Nigerians to deliver premium grocery experiences across Owode Yewa, Idi Iroko, and neighbouring communities."
     />
-    <meta property="og:image" content="https://www.omoola.ng/assets/images/hero/market-fresh@2x.svg" />
+    <meta property="og:image" content="https://www.omoola.com/assets/images/hero/market-fresh@2x.svg" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.omoola.ng/careers.html" />
+    <meta property="og:url" content="https://www.omoolasupermarketstores.com/careers.html" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Anton&family=Inter:wght@400;500;600;700&display=swap"
-    />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700;800&family=Lato:wght@400;500;600;700&display=swap"/>
     <link rel="stylesheet" href="css/base.css" />
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/components.css" />
@@ -33,18 +30,18 @@
     <a class="visually-hidden" href="#main">Skip to main content</a>
     <header class="site-header" role="banner">
       <div class="topbar">
-        <div class="d-flex items-center gap-sm">
+        <div class="d-flex items-center gap-sm" aria-label="Customer support">
           <img src="assets/icons/phone.svg" alt="Phone" width="18" height="18" />
           <span>Need help? Call or WhatsApp <strong>+234 906 000 1122</strong></span>
         </div>
         <div class="topbar__ticker" aria-live="polite">
           <ul>
-            <li>We invest in people-first culture, growth, and wellness.</li>
-            <li>Omoola riders enjoy health cover, bonuses, and gear.</li>
-            <li>Hybrid-friendly roles across product, ops, and creative.</li>
+            <li>Serving Owode Yewa, Ilaro Road, and Ogun border communities daily.</li>
+            <li>Call ahead for curbside pickup at Isaga Bus Stop.</li>
+            <li>Ask about our loyalty bundles and weekly market-fresh deals.</li>
           </ul>
         </div>
-        <span class="text-uppercase">Delivery ETA: 90 mins average</span>
+        <span class="text-uppercase">Visit us: Isaga Bus Stop · Opp. The Gem International School</span>
       </div>
       <div class="header-main container" role="navigation" aria-label="Site">
         <a class="brand" href="index.html">
@@ -105,6 +102,8 @@
           <a href="category.html?slug=personal-care">Personal Care</a>
           <a href="category.html?slug=babies-kids">Babies</a>
           <a href="deals.html">Deals</a>
+          <a href="gallery.html">Gallery</a>
+          <a href="blog.html">Blog</a>
         </nav>
       </div>
     </header>
@@ -113,7 +112,7 @@
       <div class="container d-grid gap-xl">
         <header class="section__header">
           <h1>Grow your career with Omoola</h1>
-          <p>Join a passionate Nigerian team delivering premium groceries, building smart logistics, and delighting customers
+          <p>Join a passionate team in Owode Yewa delivering premium groceries, building smart logistics, and delighting customers
             every day.</p>
         </header>
 
@@ -127,7 +126,7 @@
               <p>Omoola blends technology, creativity, and people-first culture. We empower you with tools, mentorship, and a
                 thriving community to build meaningful careers.</p>
               <div class="d-flex gap-sm flex-wrap">
-                <a class="btn btn--primary" href="mailto:careers@omoola.ng">Send your CV</a>
+                <a class="btn btn--primary" href="mailto:careers@omoolasupermarketstores.com">Send your CV</a>
                 <a class="btn btn--ghost" href="contact.html">Meet the people team</a>
               </div>
             </div>
@@ -161,14 +160,14 @@
               <h2 id="open-roles-heading">Open roles</h2>
               <p class="text-muted"><span data-careers-count>0</span> opportunities currently hiring.</p>
             </div>
-            <a class="btn btn--secondary" href="mailto:careers@omoola.ng">Introduce yourself</a>
+            <a class="btn btn--secondary" href="mailto:careers@omoolasupermarketstores.com">Introduce yourself</a>
           </div>
           <div class="d-grid gap-md" data-careers-list role="list"></div>
           <article class="card text-center" data-careers-empty hidden>
             <div class="d-grid gap-sm">
               <h3>No openings right now</h3>
               <p class="text-muted">We hire frequently. Send your CV and we’ll reach out when new roles go live.</p>
-              <a class="btn btn--primary" href="mailto:careers@omoola.ng">Join talent pool</a>
+              <a class="btn btn--primary" href="mailto:careers@omoolasupermarketstores.com">Join talent pool</a>
             </div>
           </article>
         </section>
@@ -184,11 +183,11 @@
         <section class="card d-grid gap-sm" aria-labelledby="how-to-apply-heading">
           <h2 id="how-to-apply-heading">How to apply</h2>
           <ol class="d-grid gap-sm" role="list">
-            <li>Send your CV or portfolio to <a href="mailto:careers@omoola.ng">careers@omoola.ng</a>.</li>
+            <li>Send your CV or portfolio to <a href="mailto:careers@omoolasupermarketstores.com">careers@omoolasupermarketstores.com</a>.</li>
             <li>Our people team reviews applications within 5 working days.</li>
             <li>Interviews are hybrid—online for first rounds, onsite for final culture conversations.</li>
           </ol>
-          <p class="text-muted">Need accommodations? Email <a href="mailto:people@omoola.ng">people@omoola.ng</a> and we’ll tailor the process.</p>
+          <p class="text-muted">Need accommodations? Email <a href="mailto:people@omoolasupermarketstores.com">people@omoolasupermarketstores.com</a> and we’ll tailor the process.</p>
         </section>
       </div>
     </main>
@@ -197,7 +196,7 @@
       <div class="container footer__top">
         <div>
           <img src="assets/logos/omoola-logo.svg" alt="Omoola logo" width="140" height="48" />
-          <p class="mt-md">Nigeria’s premium digital supermarket delivering smiles across Lagos daily.</p>
+          <p class="mt-md">Premium neighbourhood supermarket serving Owode Yewa, Ogun State with curated provisions.</p>
         </div>
         <div>
           <h3>Shop</h3>
