--- a/deals.html
+++ b/deals.html
@@ -7,23 +7,20 @@
     <title>Deals &amp; Coupons | Omoola Supermarket Stores</title>
     <meta
       name="description"
-      content="Discover premium Omoola supermarket deals, bundles, and coupons updated daily for Nigerian shoppers."
+      content="Discover premium Omoola supermarket deals, bundles, and coupons updated daily for Owode Yewa and Ogun State shoppers."
     />
-    <link rel="canonical" href="https://www.omoola.ng/deals.html" />
+    <link rel="canonical" href="https://www.omoolasupermarketstores.com/deals.html" />
     <meta property="og:title" content="Deals &amp; Coupons | Omoola Supermarket Stores" />
     <meta
       property="og:description"
-      content="Stack Omoola coupons with bundle discounts and save big on Lagos grocery delivery."
+      content="Stack Omoola coupons with bundle discounts and save big on Owode Yewa grocery delivery."
     />
-    <meta property="og:image" content="https://www.omoola.ng/assets/images/banners/weekend-deals@2x.svg" />
+    <meta property="og:image" content="https://www.omoolasupermarketstores.com/assets/images/banners/weekend-deals@2x.svg" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.omoola.ng/deals.html" />
+    <meta property="og:url" content="https://www.omoolasupermarketstores.com/deals.html" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Anton&family=Inter:wght@400;500;600;700&display=swap"
-    />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700;800&family=Lato:wght@400;500;600;700&display=swap"/>
     <link rel="stylesheet" href="css/base.css" />
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/components.css" />
@@ -33,18 +30,18 @@
     <a class="visually-hidden" href="#main">Skip to main content</a>
     <header class="site-header" role="banner">
       <div class="topbar">
-        <div class="d-flex items-center gap-sm">
+        <div class="d-flex items-center gap-sm" aria-label="Customer support">
           <img src="assets/icons/phone.svg" alt="Phone" width="18" height="18" />
           <span>Need help? Call or WhatsApp <strong>+234 906 000 1122</strong></span>
         </div>
         <div class="topbar__ticker" aria-live="polite">
           <ul>
-            <li>Flash deals refresh every morning by 10am for Lagos shoppers.</li>
-            <li>Stack coupons and loyalty points for maximum savings.</li>
-            <li>Limited bundles sell out fast—add to cart and checkout instantly.</li>
+            <li>Serving Owode Yewa, Ilaro Road, and Ogun border communities daily.</li>
+            <li>Call ahead for curbside pickup at Isaga Bus Stop.</li>
+            <li>Ask about our loyalty bundles and weekly market-fresh deals.</li>
           </ul>
         </div>
-        <span class="text-uppercase">Delivery ETA: 90 mins average</span>
+        <span class="text-uppercase">Visit us: Isaga Bus Stop · Opp. The Gem International School</span>
       </div>
       <div class="header-main container" role="navigation" aria-label="Site">
         <a class="brand" href="index.html">
@@ -105,6 +102,8 @@
           <a href="category.html?slug=personal-care">Personal Care</a>
           <a href="category.html?slug=babies-kids">Babies</a>
           <a href="deals.html" aria-current="page">Deals</a>
+          <a href="gallery.html">Gallery</a>
+          <a href="blog.html">Blog</a>
         </nav>
       </div>
     </header>
@@ -164,7 +163,7 @@
             </div>
             <ul class="d-grid gap-sm" role="list">
               <li>Look for the wine-coloured discount badge on every product to see instant savings.</li>
-              <li>Spend ₦20,000+ on fresh produce to unlock free same-day delivery across Lagos.</li>
+              <li>Spend ₦20,000+ on fresh produce to unlock free same-day delivery across Owode Yewa and Ilaro Road.</li>
               <li>Share your basket via WhatsApp to split payments with friends using Paystack links.</li>
             </ul>
           </div>
@@ -176,7 +175,7 @@
       <div class="container footer__top">
         <div>
           <img src="assets/logos/omoola-logo.svg" alt="Omoola logo" width="140" height="48" />
-          <p class="mt-md">Nigeria’s premium digital supermarket delivering smiles across Lagos daily.</p>
+          <p class="mt-md">Premium neighbourhood supermarket serving Owode Yewa, Ogun State with curated provisions.</p>
         </div>
         <div>
           <h3>Shop</h3>
