--- a/delivery-returns.html
+++ b/delivery-returns.html
@@ -7,23 +7,20 @@
     <title>Delivery &amp; Returns | Omoola Supermarket Stores</title>
     <meta
       name="description"
-      content="Understand Omoola’s Lagos delivery windows, fees, nationwide shipping, and friendly returns promise."
+      content="Understand Omoola’s delivery windows for Owode Yewa, Ogun border communities, and our friendly returns promise."
     />
-    <link rel="canonical" href="https://www.omoola.ng/delivery-returns.html" />
+    <link rel="canonical" href="https://www.omoolasupermarketstores.com/delivery-returns.html" />
     <meta property="og:title" content="Delivery &amp; Returns | Omoola Supermarket Stores" />
     <meta
       property="og:description"
-      content="Same-day Lagos delivery, scheduled slots, and 24-hour fresh produce guarantee from Omoola Supermarket Stores."
+      content="Same-day Owode Yewa delivery, scheduled slots, and a 24-hour freshness guarantee from Omoola Supermarket Stores."
     />
-    <meta property="og:image" content="https://www.omoola.ng/assets/images/hero/lagos-delivery@2x.svg" />
+    <meta property="og:image" content="https://www.omoolasupermarketstores.com/assets/images/hero/lagos-delivery@2x.svg" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.omoola.ng/delivery-returns.html" />
+    <meta property="og:url" content="https://www.omoolasupermarketstores.com/delivery-returns.html" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Anton&family=Inter:wght@400;500;600;700&display=swap"
-    />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700;800&family=Lato:wght@400;500;600;700&display=swap"/>
     <link rel="stylesheet" href="css/base.css" />
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/components.css" />
@@ -33,18 +30,18 @@
     <a class="visually-hidden" href="#main">Skip to main content</a>
     <header class="site-header" role="banner">
       <div class="topbar">
-        <div class="d-flex items-center gap-sm">
+        <div class="d-flex items-center gap-sm" aria-label="Customer support">
           <img src="assets/icons/phone.svg" alt="Phone" width="18" height="18" />
           <span>Need help? Call or WhatsApp <strong>+234 906 000 1122</strong></span>
         </div>
         <div class="topbar__ticker" aria-live="polite">
           <ul>
-            <li>Same-day delivery runs every two hours across Lagos.</li>
-            <li>Order tracking links arrive via SMS and WhatsApp.</li>
-            <li>24-hour freshness guarantee on all perishables.</li>
+            <li>Serving Owode Yewa, Ilaro Road, and Ogun border communities daily.</li>
+            <li>Call ahead for curbside pickup at Isaga Bus Stop.</li>
+            <li>Ask about our loyalty bundles and weekly market-fresh deals.</li>
           </ul>
         </div>
-        <span class="text-uppercase">Delivery ETA: 90 mins average</span>
+        <span class="text-uppercase">Visit us: Isaga Bus Stop · Opp. The Gem International School</span>
       </div>
       <div class="header-main container" role="navigation" aria-label="Site">
         <a class="brand" href="index.html">
@@ -105,6 +102,8 @@
           <a href="category.html?slug=personal-care">Personal Care</a>
           <a href="category.html?slug=babies-kids">Babies</a>
           <a href="deals.html">Deals</a>
+          <a href="gallery.html">Gallery</a>
+          <a href="blog.html">Blog</a>
         </nav>
       </div>
     </header>
@@ -113,7 +112,7 @@
       <div class="container d-grid gap-xl">
         <header class="section__header">
           <h1>Delivery &amp; returns</h1>
-          <p>From Lekki to Ikeja and beyond, Omoola delivers premium groceries with care and transparent policies.</p>
+          <p>From Owode Yewa to Idi Iroko and Ilaro, Omoola delivers premium groceries with care and transparent policies.</p>
         </header>
 
         <section class="card d-grid gap-md">
@@ -122,9 +121,9 @@
               <img src="assets/images/hero/lagos-delivery.svg" alt="Omoola courier delivering groceries" loading="lazy" />
             </figure>
             <div class="d-grid gap-sm">
-              <h2>Fast Lagos coverage</h2>
-              <p>We dispatch chilled vans and riders every two hours from our Lekki fulfilment hub. Track your driver live and
-                reschedule delivery windows in a tap.</p>
+              <h2>Fast Owode Yewa coverage</h2>
+              <p>We dispatch chilled vans and riders every 90 minutes from our Isaga Bus Stop hub. Track your driver live and
+                reschedule delivery windows or switch to in-store pickup in a tap.</p>
               <div class="d-flex gap-sm flex-wrap">
                 <a class="btn btn--primary" href="track-order.html">Track an order</a>
                 <a class="btn btn--ghost" href="contact.html">Speak with support</a>
@@ -140,19 +139,19 @@
           </div>
           <div class="d-grid gap-md md:grid-cols-3">
             <article class="card d-grid gap-sm" role="listitem">
-              <h3>Lagos Island &amp; Lekki</h3>
-              <p>₦1,500 • free above ₦25,000</p>
-              <p class="text-muted">Victoria Island, Ikoyi, Lekki, Ajah. Choose same-day or schedule up to 5 days ahead.</p>
+              <h3>Owode Yewa &amp; Ilaro Road</h3>
+              <p>₦800 • free above ₦15,000</p>
+              <p class="text-muted">Owode township, Isaga Bus Stop, Ilaro Road communities. Riders depart every 90 minutes.</p>
             </article>
             <article class="card d-grid gap-sm" role="listitem">
-              <h3>Mainland Express</h3>
-              <p>₦1,200 • free above ₦20,000</p>
-              <p class="text-muted">Yaba, Ikeja, Surulere, Gbagada. Riders depart at 9am, 1pm, 5pm daily.</p>
+              <h3>Idi Iroko &amp; border communities</h3>
+              <p>₦1,200 • free above ₦25,000</p>
+              <p class="text-muted">Ajilete, Idi Iroko, Ilobi, and Oke Odan. Same-day delivery for orders placed before 4pm.</p>
             </article>
             <article class="card d-grid gap-sm" role="listitem">
-              <h3>Nationwide partner courier</h3>
+              <h3>Beyond Ogun State</h3>
               <p>Rates calculated at checkout</p>
-              <p class="text-muted">Abuja, Port Harcourt, and major cities ship next-day via cold chain partners.</p>
+              <p class="text-muted">Special orders to Abeokuta, Lagos, and other Nigerian cities ship via refrigerated partners twice weekly.</p>
             </article>
           </div>
         </section>
@@ -164,10 +163,10 @@
               <h2 id="delivery-options-heading">Delivery options</h2>
             </div>
             <ul class="d-grid gap-sm" role="list">
-              <li><strong>Same-day:</strong> Order by 6pm for delivery within 90 minutes in Lagos Island and Mainland corridors.</li>
-              <li><strong>Next-day:</strong> Pick your preferred window between 8am and 8pm for larger baskets or office drops.</li>
-              <li><strong>Click &amp; collect:</strong> Pick up from our Lekki hub or partner lockers free of charge.</li>
-              <li><strong>Scheduled subscriptions:</strong> Set weekly or monthly groceries and we’ll auto-book a rider.</li>
+              <li><strong>Same-day:</strong> Order by 4pm for delivery within 90 minutes across Owode Yewa and Ilaro Road.</li>
+              <li><strong>Evening runs:</strong> Catch our 6pm – 8pm rider wave covering Idi Iroko and neighbouring border communities.</li>
+              <li><strong>Click &amp; collect:</strong> Skip the queue with curbside pickup at Isaga Bus Stop, opposite The Gem International School.</li>
+              <li><strong>Scheduled plans:</strong> Set weekly or monthly grocery drops for homes, schools, and restaurants.</li>
             </ul>
           </div>
         </section>
@@ -204,7 +203,7 @@
               </div>
               <div>
                 <h3>Email</h3>
-                <p><a href="mailto:hello@omoola.ng">hello@omoola.ng</a></p>
+                <p><a href="mailto:hello@omoolasupermarketstores.com">hello@omoolasupermarketstores.com</a></p>
               </div>
             </div>
           </div>
@@ -216,7 +215,7 @@
       <div class="container footer__top">
         <div>
           <img src="assets/logos/omoola-logo.svg" alt="Omoola logo" width="140" height="48" />
-          <p class="mt-md">Nigeria’s premium digital supermarket delivering smiles across Lagos daily.</p>
+          <p class="mt-md">Premium neighbourhood supermarket serving Owode Yewa, Ogun State with curated provisions.</p>
         </div>
         <div>
           <h3>Shop</h3>
