--- a/gallery.html
+++ b/gallery.html
@@ -4,23 +4,23 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>FAQs | Omoola Supermarket Stores</title>
-    <meta name="description" content="Find answers to common questions about Omoola Supermarket Stores deliveries, payments, and loyalty programme." />
-    <link rel="canonical" href="https://www.omoolasupermarketstores.com/faq.html" />
-    <meta property="og:title" content="FAQs | Omoola Supermarket Stores" />
-    <meta property="og:description" content="Get quick answers about ordering, delivery, payments, and loyalty rewards." />
-    <meta property="og:image" content="https://www.omoolasupermarketstores.com/assets/images/banners/weekend-deals@2x.svg" />
+    <title>Gallery | Omoola Supermarket Stores</title>
+    <meta name="description" content="Explore photos of Omoola Supermarket Stores in Owode Yewa, showcasing our aisles, community events, and curated provisions." />
+    <link rel="canonical" href="https://www.omoolasupermarketstores.com/gallery.html" />
+    <meta property="og:title" content="Gallery | Omoola Supermarket Stores" />
+    <meta property="og:description" content="Peek inside our Owode Yewa supermarket and discover the experiences waiting for you." />
+    <meta property="og:image" content="https://www.omoolasupermarketstores.com/assets/images/hero/premium-groceries@2x.svg" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.omoolasupermarketstores.com/faq.html" />
+    <meta property="og:url" content="https://www.omoolasupermarketstores.com/gallery.html" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700&amp;family=Lato:wght@400;500;600;700&amp;display=swap" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700;800&family=Lato:wght@400;500;600;700&display=swap"/>
     <link rel="stylesheet" href="css/base.css" />
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/components.css" />
     <link rel="stylesheet" href="css/utilities.css" />
   </head>
-  <body data-page="faq">
+  <body data-page="gallery">
     <a class="visually-hidden" href="#main">Skip to main content</a>
     <header class="site-header" role="banner">
       <div class="topbar">
@@ -89,7 +89,7 @@
           <a href="category.html?slug=personal-care">Personal Care</a>
           <a href="category.html?slug=babies-kids">Babies</a>
           <a href="deals.html">Deals</a>
-          <a href="gallery.html">Gallery</a>
+          <a href="gallery.html" aria-current="page">Gallery</a>
           <a href="blog.html">Blog</a>
         </nav>
       </div>
@@ -98,10 +98,10 @@
     <main id="main" class="section">
       <div class="container d-grid gap-xl">
         <header class="section__header">
-          <h1>Frequently asked questions</h1>
-          <p>Everything you need to know about Omoola deliveries, payments, and service guarantees.</p>
+          <h1>Gallery</h1>
+          <p>Step inside Omoola Supermarket Stores and explore the vibrant moments that make shopping with us special.</p>
         </header>
-        <div class="accordion" data-faq-list></div>
+        <div class="gallery-grid" data-gallery-page role="list"></div>
       </div>
     </main>
 
