--- a/index.html
+++ b/index.html
@@ -4,22 +4,24 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Omoola Supermarket Stores | Premium Groceries Delivered in Lagos</title>
-    <meta name="description" content="Shop premium Nigerian groceries, fresh produce, and pantry essentials with same-day delivery across Lagos from Omoola Supermarket Stores." />
-    <link rel="canonical" href="https://www.omoola.ng/" />
+    <title>Omoola Supermarket Stores | Premium Provisions in Owode Yewa</title>
+    <meta name="description" content="Shop provisions, household groceries, and fresh produce in Owode Yewa, Ogun State. Visit Omoola Supermarket Stores at Isaga Bus Stop or call to order for doorstep delivery." />
+    <meta name="keywords" content="supermarket in Owode Yewa, provisions in Ogun State, grocery store near Ilaro Road, affordable household items in Owode" />
+    <link rel="canonical" href="https://www.omoolasupermarketstores.com/" />
     <meta property="og:title" content="Omoola Supermarket Stores" />
-    <meta property="og:description" content="Fresh groceries, fast delivery at the best prices." />
-    <meta property="og:image" content="https://www.omoola.ng/assets/images/hero/premium-groceries@2x.svg" />
+    <meta property="og:description" content="Owode Yewa’s trusted supermarket for curated provisions, fast delivery, and warm service." />
+    <meta property="og:image" content="https://www.omoolasupermarketstores.com/assets/images/hero/premium-groceries@2x.svg" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.omoola.ng/" />
+    <meta property="og:url" content="https://www.omoolasupermarketstores.com/" />
+    <meta property="og:locale" content="en_NG" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Omoola Supermarket Stores" />
-    <meta name="twitter:description" content="Fresh groceries, fast delivery at the best prices." />
-    <meta name="twitter:image" content="https://www.omoola.ng/assets/images/hero/premium-groceries@2x.svg" />
+    <meta name="twitter:description" content="Premium supermarket serving Owode Yewa with fresh groceries and household essentials." />
+    <meta name="twitter:image" content="https://www.omoolasupermarketstores.com/assets/images/hero/premium-groceries@2x.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preload" href="assets/images/hero/premium-groceries@2x.svg" as="image" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Anton&family=Inter:wght@400;500;600;700&display=swap" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700&amp;family=Lato:wght@400;500;600;700&amp;display=swap" />
     <link rel="stylesheet" href="css/base.css" />
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/components.css" />
@@ -27,21 +29,41 @@
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
-        "@type": "Organization",
+        "@type": ["Organization", "GroceryStore"],
         "name": "Omoola Supermarket Stores",
-        "url": "https://www.omoola.ng",
-        "logo": "https://www.omoola.ng/assets/logos/omoola-logo.svg",
+        "url": "https://www.omoolasupermarketstores.com",
+        "logo": "https://www.omoolasupermarketstores.com/assets/logos/omoola-logo.svg",
+        "image": "https://www.omoolasupermarketstores.com/assets/images/hero/premium-groceries@2x.svg",
+        "telephone": "+2349060001122",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Isaga Bus Stop, Opp. The Gem International School, Ilaro Road",
+          "addressLocality": "Owode Yewa",
+          "addressRegion": "OG",
+          "postalCode": "111005",
+          "addressCountry": "NG"
+        },
+        "openingHoursSpecification": [
+          {
+            "@type": "OpeningHoursSpecification",
+            "dayOfWeek": [
+              "Monday",
+              "Tuesday",
+              "Wednesday",
+              "Thursday",
+              "Friday",
+              "Saturday",
+              "Sunday"
+            ],
+            "opens": "07:00",
+            "closes": "21:00"
+          }
+        ],
         "sameAs": [
           "https://www.facebook.com/omoolastores",
           "https://www.instagram.com/omoolastores",
           "https://www.twitter.com/omoolastores"
-        ],
-        "contactPoint": {
-          "@type": "ContactPoint",
-          "telephone": "+2349060001122",
-          "contactType": "customer service",
-          "areaServed": "NG"
-        }
+        ]
       }
     </script>
   </head>
@@ -56,12 +78,12 @@
         </div>
         <div class="topbar__ticker" aria-live="polite">
           <ul>
-            <li>Same-day delivery across Lagos when you order before 6pm.</li>
-            <li>Earn double loyalty points on breakfast bundles this weekend.</li>
-            <li>Use coupon <strong>OMOOLA10</strong> for 10% off fresh produce.</li>
+            <li>Serving Owode Yewa, Ilaro Road, and Ogun border communities daily.</li>
+            <li>Call ahead for curbside pickup at Isaga Bus Stop.</li>
+            <li>Ask about our loyalty bundles and weekly market-fresh deals.</li>
           </ul>
         </div>
-        <span class="text-uppercase">Delivery ETA: 90 mins average</span>
+        <span class="text-uppercase">Visit us: Isaga Bus Stop · Opp. The Gem International School</span>
       </div>
       <div class="header-main container" role="navigation" aria-label="Site">
         <a class="brand" href="index.html">
@@ -115,6 +137,8 @@
           <a href="category.html?slug=personal-care">Personal Care</a>
           <a href="category.html?slug=babies-kids">Babies</a>
           <a href="deals.html">Deals</a>
+          <a href="gallery.html">Gallery</a>
+          <a href="blog.html">Blog</a>
         </nav>
       </div>
     </header>
@@ -125,11 +149,12 @@
           <img src="assets/images/hero/premium-groceries@2x.svg" alt="Premium groceries" />
         </div>
         <div class="hero__content">
-          <h1 class="hero__title">OMOOLA SUPERMARKET STORES</h1>
-          <p class="hero__subtitle">Fresh groceries, fast delivery at the best prices.</p>
+          <span class="hero__kicker">Owode Yewa's trusted grocer</span>
+          <h1 class="hero__title">Fresh provisions for every family table</h1>
+          <p class="hero__subtitle">Collect in minutes at Isaga Bus Stop or schedule a doorstep delivery along Ilaro Road.</p>
           <div class="hero__actions">
-            <a class="btn btn--primary" href="#popular">Shop Now</a>
-            <a class="btn btn--secondary" href="#deals">View Deals</a>
+            <a class="btn btn--primary" href="tel:+2349060001122">Call to Order</a>
+            <a class="btn btn--secondary" href="contact.html#map">Get Directions</a>
           </div>
         </div>
       </section>
@@ -137,8 +162,8 @@
       <section class="section" aria-labelledby="value-props-heading">
         <div class="container">
           <header class="section__header">
-            <h2 id="value-props-heading">Why Lagos trusts Omoola</h2>
-            <p>Premium groceries delivered with care, convenience, and incredible value.</p>
+            <h2 id="value-props-heading">Why Owode Yewa shops Omoola</h2>
+            <p>Neighbourhood convenience, premium brands, and concierge-level service every day of the week.</p>
           </header>
           <div class="grid" data-value-props role="list"></div>
         </div>
@@ -148,9 +173,32 @@
         <div class="container">
           <header class="section__header">
             <h2 id="categories-heading">Shop by category</h2>
-            <p>Discover vibrant categories handpicked for Nigerian kitchens.</p>
+            <p>Discover vibrant categories handpicked for Owode Yewa homes and hospitality businesses.</p>
           </header>
           <div class="category-grid" data-category-grid role="list"></div>
+        </div>
+      </section>
+
+      <section class="section" aria-labelledby="gallery-heading">
+        <div class="container d-grid gap-lg">
+          <header class="section__header">
+            <h2 id="gallery-heading">Inside Omoola Supermarket Stores</h2>
+            <p>Take a peek at our Owode Yewa flagship—from curated aisles to community tasting events.</p>
+          </header>
+          <div class="gallery-grid" data-gallery-preview role="list"></div>
+          <div class="d-flex justify-center">
+            <a class="btn btn--ghost" href="gallery.html">View full gallery</a>
+          </div>
+        </div>
+      </section>
+
+      <section class="section section--alt" aria-labelledby="testimonials-heading">
+        <div class="container d-grid gap-lg">
+          <header class="section__header">
+            <h2 id="testimonials-heading">Customers love the Omoola experience</h2>
+            <p>Hear from families and business owners across Owode Yewa, Idi Iroko, and Ilaro Road.</p>
+          </header>
+          <div data-testimonials></div>
         </div>
       </section>
 
@@ -203,7 +251,7 @@
         <div class="container d-grid gap-xl">
           <header class="section__header">
             <h2 id="trust-heading">Trusted by top brands and partners</h2>
-            <p>We collaborate with Nigeria’s favourite producers and fintechs for dependable deliveries.</p>
+            <p>We collaborate with Ogun-based farmers, distributors, and fintech partners to keep every delivery reliable.</p>
           </header>
           <div class="d-flex flex-wrap gap-lg items-center" data-trust-logos></div>
           <div class="d-flex flex-wrap gap-lg items-center" data-brand-logos></div>
@@ -215,7 +263,7 @@
       <div class="container footer__top">
         <div>
           <img src="assets/logos/omoola-logo.svg" alt="Omoola logo" width="140" height="48" />
-          <p class="mt-md">Nigeria’s premium digital supermarket delivering smiles across Lagos daily.</p>
+          <p class="mt-md">Premium neighbourhood supermarket serving Owode Yewa, Ogun State with curated provisions.</p>
         </div>
         <div>
           <h3>Shop</h3>
