--- a/privacy.html
+++ b/privacy.html
@@ -14,7 +14,7 @@
         <h2 class="section-title" style="font-size:2rem;">Data collected</h2>
         <p>We collect contact details, delivery addresses, order history, device information, and payment references via secure gateways (Paystack & Flutterwave).</p>
         <h2 class="section-title" style="font-size:2rem;">Your choices</h2>
-        <p>Update your preferences anytime from your account dashboard or email <a href="mailto:privacy@omoola.ng">privacy@omoola.ng</a>.</p>
+        <p>Update your preferences anytime from your account dashboard or email <a href="mailto:privacy@omoolasupermarketstores.com">privacy@omoolasupermarketstores.com</a>.</p>
       </main>
     </div>
     <script type="module" src="src/scripts/app.js" defer></script>
