--- a/about.html
+++ b/about.html
@@ -4,17 +4,17 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>About Omoola Supermarket Stores</title>
-    <meta name="description" content="Learn about Omoola Supermarket Stores, Nigeria’s premium online grocer delivering fresh groceries with heart." />
-    <link rel="canonical" href="https://www.omoola.ng/about.html" />
+    <title>About Omoola Supermarket Stores | Owode Yewa</title>
+    <meta name="description" content="Discover how Omoola Supermarket Stores serves Owode Yewa, Ogun State with curated provisions, community events, and dependable delivery." />
+    <link rel="canonical" href="https://www.omoolasupermarketstores.com/about.html" />
     <meta property="og:title" content="About Omoola Supermarket Stores" />
-    <meta property="og:description" content="We connect Nigerian households with fresh groceries, curated brands, and friendly service." />
-    <meta property="og:image" content="https://www.omoola.ng/assets/images/hero/lagos-delivery@2x.svg" />
+    <meta property="og:description" content="Our Owode Yewa supermarket blends market-fresh sourcing with exceptional service for families and businesses." />
+    <meta property="og:image" content="https://www.omoolasupermarketstores.com/assets/images/hero/lagos-delivery@2x.svg" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.omoola.ng/about.html" />
+    <meta property="og:url" content="https://www.omoolasupermarketstores.com/about.html" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Anton&family=Inter:wght@400;500;600;700&display=swap" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700&amp;family=Lato:wght@400;500;600;700&amp;display=swap" />
     <link rel="stylesheet" href="css/base.css" />
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/components.css" />
@@ -24,18 +24,18 @@
     <a class="visually-hidden" href="#main">Skip to main content</a>
     <header class="site-header" role="banner">
       <div class="topbar">
-        <div class="d-flex items-center gap-sm">
+        <div class="d-flex items-center gap-sm" aria-label="Customer support">
           <img src="assets/icons/phone.svg" alt="Phone" width="18" height="18" />
           <span>Need help? Call or WhatsApp <strong>+234 906 000 1122</strong></span>
         </div>
         <div class="topbar__ticker" aria-live="polite">
           <ul>
-            <li>Omoola partners with 120+ Nigerian farmers and brands.</li>
-            <li>We deliver 5,000+ orders weekly across Lagos.</li>
-            <li>Every order earns loyalty points for future savings.</li>
+            <li>Serving Owode Yewa, Ilaro Road, and Ogun border communities daily.</li>
+            <li>Call ahead for curbside pickup at Isaga Bus Stop.</li>
+            <li>Ask about our loyalty bundles and weekly market-fresh deals.</li>
           </ul>
         </div>
-        <span class="text-uppercase">Delivery ETA: 90 mins average</span>
+        <span class="text-uppercase">Visit us: Isaga Bus Stop · Opp. The Gem International School</span>
       </div>
       <div class="header-main container" role="navigation" aria-label="Site">
         <a class="brand" href="index.html">
@@ -89,6 +89,8 @@
           <a href="category.html?slug=personal-care">Personal Care</a>
           <a href="category.html?slug=babies-kids">Babies</a>
           <a href="deals.html">Deals</a>
+          <a href="gallery.html">Gallery</a>
+          <a href="blog.html">Blog</a>
         </nav>
       </div>
     </header>
@@ -97,27 +99,27 @@
       <div class="container d-grid gap-xl">
         <header class="section__header">
           <h1>Our story</h1>
-          <p>Omoola Supermarket Stores is on a mission to make premium groceries accessible to every Lagos household.</p>
+          <p>Omoola Supermarket Stores champions Owode Yewa families with dependable access to premium groceries and heartfelt service.</p>
         </header>
         <article class="card d-grid gap-md" data-about-copy></article>
         <section class="section" aria-labelledby="values-heading">
           <div class="container d-grid gap-xl">
             <header class="section__header">
               <h2 id="values-heading">What drives us</h2>
-              <p>Premium quality, tech-enabled convenience, and heartfelt service.</p>
+              <p>Everything we do balances freshness, convenience, and community uplift across Ogun State.</p>
             </header>
             <div class="grid">
               <article class="card d-grid gap-sm">
                 <h3>Freshness obsession</h3>
-                <p>We buy direct from farms and markets every morning so your ingredients stay vibrant.</p>
+                <p>We buy direct from Yewa farmers and trusted suppliers each morning so your ingredients stay vibrant.</p>
               </article>
               <article class="card d-grid gap-sm">
                 <h3>People-first service</h3>
-                <p>Our concierge team supports every order with WhatsApp updates and smart substitutions.</p>
+                <p>Our concierge team supports every order with WhatsApp updates, curbside pickup, and thoughtful substitutions.</p>
               </article>
               <article class="card d-grid gap-sm">
                 <h3>Community impact</h3>
-                <p>We champion local producers, empower riders with fair wages, and reduce food waste.</p>
+                <p>We partner with local producers, empower riders with fair wages, and host nutrition clinics for our neighbours.</p>
               </article>
             </div>
           </div>
@@ -129,7 +131,7 @@
       <div class="container footer__top">
         <div>
           <img src="assets/logos/omoola-logo.svg" alt="Omoola logo" width="140" height="48" />
-          <p class="mt-md">Nigeria’s premium digital supermarket delivering smiles across Lagos daily.</p>
+          <p class="mt-md">Premium neighbourhood supermarket serving Owode Yewa, Ogun State with curated provisions.</p>
         </div>
         <div>
           <h3>Shop</h3>
