--- a/blog.html
+++ b/blog.html
@@ -4,23 +4,23 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>FAQs | Omoola Supermarket Stores</title>
-    <meta name="description" content="Find answers to common questions about Omoola Supermarket Stores deliveries, payments, and loyalty programme." />
-    <link rel="canonical" href="https://www.omoolasupermarketstores.com/faq.html" />
-    <meta property="og:title" content="FAQs | Omoola Supermarket Stores" />
-    <meta property="og:description" content="Get quick answers about ordering, delivery, payments, and loyalty rewards." />
-    <meta property="og:image" content="https://www.omoolasupermarketstores.com/assets/images/banners/weekend-deals@2x.svg" />
+    <title>Blog &amp; News | Omoola Supermarket Stores</title>
+    <meta name="description" content="Read the latest updates, shopping tips, and community stories from Omoola Supermarket Stores in Owode Yewa." />
+    <link rel="canonical" href="https://www.omoolasupermarketstores.com/blog.html" />
+    <meta property="og:title" content="Blog &amp; News | Omoola Supermarket Stores" />
+    <meta property="og:description" content="Stay informed about promotions, seasonal arrivals, and wellness events at Omoola Supermarket Stores." />
+    <meta property="og:image" content="https://www.omoolasupermarketstores.com/assets/images/blog/lagos-market-finds@2x.svg" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.omoolasupermarketstores.com/faq.html" />
+    <meta property="og:url" content="https://www.omoolasupermarketstores.com/blog.html" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700&amp;family=Lato:wght@400;500;600;700&amp;display=swap" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700;800&family=Lato:wght@400;500;600;700&display=swap"/>
     <link rel="stylesheet" href="css/base.css" />
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/components.css" />
     <link rel="stylesheet" href="css/utilities.css" />
   </head>
-  <body data-page="faq">
+  <body data-page="blog">
     <a class="visually-hidden" href="#main">Skip to main content</a>
     <header class="site-header" role="banner">
       <div class="topbar">
@@ -90,7 +90,7 @@
           <a href="category.html?slug=babies-kids">Babies</a>
           <a href="deals.html">Deals</a>
           <a href="gallery.html">Gallery</a>
-          <a href="blog.html">Blog</a>
+          <a href="blog.html" aria-current="page">Blog</a>
         </nav>
       </div>
     </header>
@@ -98,10 +98,10 @@
     <main id="main" class="section">
       <div class="container d-grid gap-xl">
         <header class="section__header">
-          <h1>Frequently asked questions</h1>
-          <p>Everything you need to know about Omoola deliveries, payments, and service guarantees.</p>
+          <h1>Blog &amp; News</h1>
+          <p>Tips, announcements, and fresh inspiration from Omoola Supermarket Stores in Owode Yewa.</p>
         </header>
-        <div class="accordion" data-faq-list></div>
+        <div class="d-grid gap-xl" data-blog-page role="list"></div>
       </div>
     </main>
 
