--- a/contact.html
+++ b/contact.html
@@ -4,17 +4,17 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Contact Omoola Supermarket Stores</title>
-    <meta name="description" content="Reach Omoola Supermarket Stores for customer care, delivery support, or partnership enquiries." />
-    <link rel="canonical" href="https://www.omoola.ng/contact.html" />
+    <title>Contact Omoola Supermarket Stores | Owode Yewa</title>
+    <meta name="description" content="Visit Omoola Supermarket Stores at Isaga Bus Stop, Owode Yewa or reach our team via phone, WhatsApp, or email for grocery orders and support." />
+    <link rel="canonical" href="https://www.omoolasupermarketstores.com/contact.html" />
     <meta property="og:title" content="Contact Omoola Supermarket Stores" />
-    <meta property="og:description" content="Call, email, or WhatsApp Omoola for quick grocery support." />
-    <meta property="og:image" content="https://www.omoola.ng/assets/images/hero/premium-groceries@2x.svg" />
+    <meta property="og:description" content="Call, email, or WhatsApp our Owode Yewa supermarket team for quick assistance." />
+    <meta property="og:image" content="https://www.omoolasupermarketstores.com/assets/images/hero/premium-groceries@2x.svg" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.omoola.ng/contact.html" />
+    <meta property="og:url" content="https://www.omoolasupermarketstores.com/contact.html" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Anton&family=Inter:wght@400;500;600;700&display=swap" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700&amp;family=Lato:wght@400;500;600;700&amp;display=swap" />
     <link rel="stylesheet" href="css/base.css" />
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/components.css" />
@@ -24,18 +24,18 @@
     <a class="visually-hidden" href="#main">Skip to main content</a>
     <header class="site-header" role="banner">
       <div class="topbar">
-        <div class="d-flex items-center gap-sm">
+        <div class="d-flex items-center gap-sm" aria-label="Customer support">
           <img src="assets/icons/phone.svg" alt="Phone" width="18" height="18" />
           <span>Need help? Call or WhatsApp <strong>+234 906 000 1122</strong></span>
         </div>
         <div class="topbar__ticker" aria-live="polite">
           <ul>
-            <li>Customer care is available 7am – 9pm daily.</li>
-            <li>Need bulk orders? We’ll tailor a plan for you.</li>
-            <li>Chat on WhatsApp for instant order updates.</li>
+            <li>Serving Owode Yewa, Ilaro Road, and Ogun border communities daily.</li>
+            <li>Call ahead for curbside pickup at Isaga Bus Stop.</li>
+            <li>Ask about our loyalty bundles and weekly market-fresh deals.</li>
           </ul>
         </div>
-        <span class="text-uppercase">Delivery ETA: 90 mins average</span>
+        <span class="text-uppercase">Visit us: Isaga Bus Stop · Opp. The Gem International School</span>
       </div>
       <div class="header-main container" role="navigation" aria-label="Site">
         <a class="brand" href="index.html">
@@ -89,6 +89,8 @@
           <a href="category.html?slug=personal-care">Personal Care</a>
           <a href="category.html?slug=babies-kids">Babies</a>
           <a href="deals.html">Deals</a>
+          <a href="gallery.html">Gallery</a>
+          <a href="blog.html">Blog</a>
         </nav>
       </div>
     </header>
@@ -97,7 +99,7 @@
       <div class="container d-grid gap-xl">
         <header class="section__header">
           <h1>Contact us</h1>
-          <p>We’re here to help with orders, deliveries, and corporate partnerships.</p>
+          <p>We’re on hand for deliveries around Owode Yewa, in-store pickups, and tailored corporate hampers.</p>
         </header>
         <div class="layout-two-column">
           <section class="card d-grid gap-lg" data-contact-info></section>
@@ -127,6 +129,22 @@
             <button class="btn btn--primary" type="submit">Submit</button>
           </form>
         </div>
+        <section class="card d-grid gap-md" id="map" aria-labelledby="map-heading">
+          <div class="d-grid gap-xs">
+            <h2 id="map-heading">Find us easily</h2>
+            <p>Omoola Supermarket Stores is located at Isaga Bus Stop, opposite The Gem International School along Ilaro Road, Owode Yewa.</p>
+          </div>
+          <div class="map-embed">
+            <iframe
+              title="Omoola Supermarket Stores on Google Maps"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3931.6374979118144!2d2.934760415337017!3d6.698330423222902!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNsKwNDEnNTQuMCJOIDIuNTYnMDUiRQ!5e0!3m2!1sen!2sng!4v1700000000000"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
+          <a class="btn btn--ghost" href="https://maps.google.com/?q=Omoola+Supermarket+Stores+Owode+Yewa" target="_blank" rel="noopener">Get directions</a>
+        </section>
       </div>
     </main>
 
@@ -134,7 +152,7 @@
       <div class="container footer__top">
         <div>
           <img src="assets/logos/omoola-logo.svg" alt="Omoola logo" width="140" height="48" />
-          <p class="mt-md">Nigeria’s premium digital supermarket delivering smiles across Lagos daily.</p>
+          <p class="mt-md">Premium neighbourhood supermarket serving Owode Yewa, Ogun State with curated provisions.</p>
         </div>
         <div>
           <h3>Shop</h3>
