--- a/faqs.html
+++ b/faqs.html
@@ -10,7 +10,7 @@
     <div data-app-root>
       <main class="container" style="margin-top:2rem;max-width:900px;">
         <h1 class="section-title">Frequently asked questions</h1>
-        <details class="card"><summary style="font-weight:600;">What areas do you deliver to?</summary><p>Same-day delivery in Lagos Mainland, Island, Lekki-Ajah axis, and next-day shipping nationwide via partner couriers.</p></details>
+        <details class="card"><summary style="font-weight:600;">What areas do you deliver to?</summary><p>Same-day delivery in Owode Yewa Mainland, Island, Lekki-Ajah axis, and next-day shipping nationwide via partner couriers.</p></details>
         <details class="card"><summary style="font-weight:600;">What payment methods are accepted?</summary><p>Pay securely via Paystack or Flutterwave using cards, bank transfers, USSD, or bank accounts. We also accept cashless on delivery for verified customers.</p></details>
         <details class="card"><summary style="font-weight:600;">How do loyalty points work?</summary><p>Earn 2 points for every ₦100 spent. Reach 5,000 points for Gold tier with free delivery for a month.</p></details>
         <details class="card"><summary style="font-weight:600;">Can I order via WhatsApp?</summary><p>Yes! Send your shopping list to <a href="https://wa.me/2348030000000">+234 803 000 0000</a> and a personal shopper will assist you.</p></details>
