--- a/product.html
+++ b/product.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Product Detail | Omoola Supermarket Stores</title>
     <meta name="description" content="Discover premium groceries with detailed nutrition facts, delivery info, and customer reviews at Omoola Supermarket Stores." />
-    <link rel="canonical" href="https://www.omoola.ng/product.html" />
+    <link rel="canonical" href="https://www.omoolasupermarketstores.com/product.html" />
     <meta property="og:title" content="Product Detail | Omoola Supermarket Stores" />
     <meta property="og:description" content="Explore Omoola’s fresh groceries and add to cart for same-day delivery." />
-    <meta property="og:image" content="https://www.omoola.ng/assets/images/hero/market-fresh@2x.svg" />
+    <meta property="og:image" content="https://www.omoolasupermarketstores.com/assets/images/hero/market-fresh@2x.svg" />
     <meta property="og:type" content="product" />
-    <meta property="og:url" content="https://www.omoola.ng/product.html" />
+    <meta property="og:url" content="https://www.omoolasupermarketstores.com/product.html" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Anton&family=Inter:wght@400;500;600;700&display=swap" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700&amp;family=Lato:wght@400;500;600;700&amp;display=swap" />
     <link rel="stylesheet" href="css/base.css" />
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/components.css" />
@@ -24,18 +24,18 @@
     <a class="visually-hidden" href="#main">Skip to main content</a>
     <header class="site-header" role="banner">
       <div class="topbar">
-        <div class="d-flex items-center gap-sm">
+        <div class="d-flex items-center gap-sm" aria-label="Customer support">
           <img src="assets/icons/phone.svg" alt="Phone" width="18" height="18" />
           <span>Need help? Call or WhatsApp <strong>+234 906 000 1122</strong></span>
         </div>
         <div class="topbar__ticker" aria-live="polite">
           <ul>
-            <li>Freshness guaranteed or your money back.</li>
-            <li>Over 90 curated products ready for delivery.</li>
-            <li>Earn Omoola points with every order.</li>
+            <li>Serving Owode Yewa, Ilaro Road, and Ogun border communities daily.</li>
+            <li>Call ahead for curbside pickup at Isaga Bus Stop.</li>
+            <li>Ask about our loyalty bundles and weekly market-fresh deals.</li>
           </ul>
         </div>
-        <span class="text-uppercase">Delivery ETA: 90 mins average</span>
+        <span class="text-uppercase">Visit us: Isaga Bus Stop · Opp. The Gem International School</span>
       </div>
       <div class="header-main container" role="navigation" aria-label="Site">
         <a class="brand" href="index.html">
@@ -89,6 +89,8 @@
           <a href="category.html?slug=personal-care">Personal Care</a>
           <a href="category.html?slug=babies-kids">Babies</a>
           <a href="deals.html">Deals</a>
+          <a href="gallery.html">Gallery</a>
+          <a href="blog.html">Blog</a>
         </nav>
       </div>
     </header>
@@ -99,7 +101,7 @@
       <div class="container footer__top">
         <div>
           <img src="assets/logos/omoola-logo.svg" alt="Omoola logo" width="140" height="48" />
-          <p class="mt-md">Nigeria’s premium digital supermarket delivering smiles across Lagos daily.</p>
+          <p class="mt-md">Premium neighbourhood supermarket serving Owode Yewa, Ogun State with curated provisions.</p>
         </div>
         <div>
           <h3>Shop</h3>
