--- a/wishlist.html
+++ b/wishlist.html
@@ -9,20 +9,20 @@
       name="description"
       content="Save your favourite Omoola groceries for fast reorders, gifting, and family sharing."
     />
-    <link rel="canonical" href="https://www.omoola.ng/wishlist.html" />
+    <link rel="canonical" href="https://www.omoolasupermarketstores.com/wishlist.html" />
     <meta property="og:title" content="Wishlist | Omoola Supermarket Stores" />
     <meta
       property="og:description"
       content="Curate your Omoola favourites, set restock reminders, and check out faster across devices."
     />
-    <meta property="og:image" content="https://www.omoola.ng/assets/images/banners/omoola-rewards@2x.svg" />
+    <meta property="og:image" content="https://www.omoolasupermarketstores.com/assets/images/banners/omoola-rewards@2x.svg" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.omoola.ng/wishlist.html" />
+    <meta property="og:url" content="https://www.omoolasupermarketstores.com/wishlist.html" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Anton&family=Inter:wght@400;500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700&amp;family=Lato:wght@400;500;600;700&amp;display=swap"
     />
     <link rel="stylesheet" href="css/base.css" />
     <link rel="stylesheet" href="css/layout.css" />
@@ -33,18 +33,18 @@
     <a class="visually-hidden" href="#main">Skip to main content</a>
     <header class="site-header" role="banner">
       <div class="topbar">
-        <div class="d-flex items-center gap-sm">
+        <div class="d-flex items-center gap-sm" aria-label="Customer support">
           <img src="assets/icons/phone.svg" alt="Phone" width="18" height="18" />
           <span>Need help? Call or WhatsApp <strong>+234 906 000 1122</strong></span>
         </div>
         <div class="topbar__ticker" aria-live="polite">
           <ul>
-            <li>Save favourites and share baskets with family instantly.</li>
-            <li>Earn loyalty points whenever you reorder wishlist picks.</li>
-            <li>Omoola concierge suggests smart swaps if an item sells out.</li>
+            <li>Serving Owode Yewa, Ilaro Road, and Ogun border communities daily.</li>
+            <li>Call ahead for curbside pickup at Isaga Bus Stop.</li>
+            <li>Ask about our loyalty bundles and weekly market-fresh deals.</li>
           </ul>
         </div>
-        <span class="text-uppercase">Delivery ETA: 90 mins average</span>
+        <span class="text-uppercase">Visit us: Isaga Bus Stop · Opp. The Gem International School</span>
       </div>
       <div class="header-main container" role="navigation" aria-label="Site">
         <a class="brand" href="index.html">
@@ -105,6 +105,8 @@
           <a href="category.html?slug=personal-care">Personal Care</a>
           <a href="category.html?slug=babies-kids">Babies</a>
           <a href="deals.html">Deals</a>
+          <a href="gallery.html">Gallery</a>
+          <a href="blog.html">Blog</a>
         </nav>
       </div>
     </header>
@@ -173,7 +175,7 @@
       <div class="container footer__top">
         <div>
           <img src="assets/logos/omoola-logo.svg" alt="Omoola logo" width="140" height="48" />
-          <p class="mt-md">Nigeria’s premium digital supermarket delivering smiles across Lagos daily.</p>
+          <p class="mt-md">Premium neighbourhood supermarket serving Owode Yewa, Ogun State with curated provisions.</p>
         </div>
         <div>
           <h3>Shop</h3>
